fixed alignment on home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,6 +17,7 @@
   }
   .index-layout {
   display: flex;
+  justify-content: space-between;
   }
 }
 
